<resources>
    <string name="app_name">LETRAS_jogo_da_velha</string>
    <string name="comecar_partida">Começar Partida</string>
    <string name="historico_de_partidas">Histórico de partidas</string>
    <string name="tipo_de_jog">Tipo de jogo</string>
    <string name="vs_jogador">vs Jogador</string>
    <string name="vs_bot">vs Bot</string>
    <string name="nome_dos_jogadores">Nome dos jogadores</string>
    <string name="jogador_1">Jogador 1</string>
    <string name="jogador_2">Jogador 2</string>
    <string name="tamanho_tabuleiro">Tamanho do tabuleiro</string>
    <string name="_3x3">3x3</string>
    <string name="_4x4">4x4</string>
    <string name="_5x5">5x5</string>
    <string name="_6x6">6x6</string>
    <string name="vez_do_jogador">Vez do jogador</string>
    <string name="recomecar">Recomeçar</string>
    <string name="novo_jogo">Novo Jogo</string>
    <string name="parabens_jogador1">Parabéns Jogador 1. Você ganhou!</string>
    <string name="voltar">Voltar</string>
    <string name="historico_3x3">Histórico 3x3</string>
    <string name="historico_4x4">Histórico 4x4</string>
    <string name="exibir_ranking">Exibir ranking</string>
    <string name="_2">2</string>
    <string name="historico_5x5">Histórico 5x5</string>
    <string name="historico_6x6">Histórico 6x6</string>
</resources>